<resources>
    <string name="app_name">Retrofit1</string>
    <string name="numberofteams">numberOfTeams:</string>
    <string name="caption">caption:</string>
    <string name="league">league:</string>
    <string name="year">year:</string>
    <string name="currentmatchday">currentMatchday:</string>
    <string name="numberofmatchdays">numberOfMatchdays:</string>
    <string name="numberofgames">numberOfGames:</string>
    <string name="lastupdated">lastUpdated:</string>
    <string name="teams">Teams</string>
    <string name="fixtures">fixtures</string>
    <string name="league_table">League Table</string>
</resources>
